# bitwarden-secrets

./: .env.example  README.md  config-bitwarden.py  config_bitwarden.py  pyproject.toml
bitwarden_secrets/: __init__.py  cli.py  injector.py
examples/: example_usage.ps1  example_usage.sh
