[project]
name = "bitwarden-secrets"
version = "1.0.0"
description = "Bitwarden Secrets Configuration"
requires-python = ">=3.12,<3.13"
dependencies = [
    "bitwarden-sdk>=1.0.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
]

[dependency-groups]
dev = [
    "ipython>=9.1.0",
]

[tool.ruff]
exclude = [".venv", ".sh"]
